finish up the main section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A fake portfolio website for a person named Ashley Ailliams">
+    <meta
+      name="description"
+      content="A fake portfolio website for a person named Ashley Ailliams"
+    />
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -23,10 +26,13 @@
           width="1920"
           height="2880"
         />
+
         <h2 class="name">Ashley Williams</h2>
       </div>
+
       <div>
         <h2>About me</h2>
+
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nostrum
           fugit dolorem optio inventore officia ut? Quos voluptatibus incidunt,
@@ -36,12 +42,145 @@
           incidunt nisi! Cum libero voluptate veritatis. Eos expedita dolor odio
           architecto vitae est non, voluptas earum veritatis?
         </p>
+
         <nav>
-          <a href="#top"><img src="img/linkedin-logo.svg" alt="Linkedin logo"></a>
-          <a href="#top"><img src="img/github-logo.svg" alt="Github Logo"></a>
-          <a href="#top"><img src="img/twitter-logo.svg" alt="twitter logo"></a>
+          <a href="#top"
+            ><img src="img/linkedin-logo.svg" alt="Linkedin logo"
+          /></a>
+          <a href="#top">
+            <img src="img/github-logo.svg" alt="Github Logo" />
+          </a>
+          <a href="#top"
+            ><img src="img/twitter-logo.svg" alt="twitter logo"
+          /></a>
         </nav>
       </div>
     </header>
+
+    <main>
+      <h2>My Work</h2>
+
+      <div class="projects-container">
+        <section class="project-card">
+          <div>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h4>Project Title</h4>
+            <div class="project-links-container">
+              <a href=""><img src="img/github-logo.svg" alt="github-logo" /></a>
+              <a href=""
+                ><img src="img/link-external.svg" alt="project link"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <p>short description of the project, just a few lines will do.</p>
+          </div>
+        </section>
+
+        <section class="project-card">
+          <div>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h4>Project Title</h4>
+            <div class="project-links-container">
+              <a href=""><img src="img/github-logo.svg" alt="github-logo" /></a>
+              <a href=""
+                ><img src="img/link-external.svg" alt="project link"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <p>short description of the project, just a few lines will do.</p>
+          </div>
+        </section>
+
+        <section class="project-card">
+          <div>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h4>Project Title</h4>
+            <div class="project-links-container">
+              <a href=""><img src="img/github-logo.svg" alt="github-logo" /></a>
+              <a href=""
+                ><img src="img/link-external.svg" alt="project link"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <p>short description of the project, just a few lines will do.</p>
+          </div>
+        </section>
+
+        <section class="project-card">
+          <div>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h4>Project Title</h4>
+            <div class="project-links-container">
+              <a href=""><img src="img/github-logo.svg" alt="github-logo" /></a>
+              <a href=""
+                ><img src="img/link-external.svg" alt="project link"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <p>short description of the project, just a few lines will do.</p>
+          </div>
+        </section>
+
+        <section class="project-card">
+          <div>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h4>Project Title</h4>
+            <div class="project-links-container">
+              <a href=""><img src="img/github-logo.svg" alt="github-logo" /></a>
+              <a href=""
+                ><img src="img/link-external.svg" alt="project link"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <p>short description of the project, just a few lines will do.</p>
+          </div>
+        </section>
+
+        <section class="project-card">
+          <div>
+            <img src="" alt="" />
+          </div>
+
+          <div>
+            <h4>Project Title</h4>
+            <div class="project-links-container">
+              <a href=""><img src="img/github-logo.svg" alt="github-logo" /></a>
+              <a href=""
+                ><img src="img/link-external.svg" alt="project link"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <p>short description of the project, just a few lines will do.</p>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
