complete contact info section

--- a/index.html
+++ b/index.html
@@ -182,5 +182,40 @@
         </section>
       </div>
     </main>
+
+    <footer>
+      <div class="contact-info">
+        <div>
+          <h2>Contact Me</h2>
+          <p>
+            please get in touch if you think our work could be mutually
+            beneficial!
+          </p>
+          <address>
+            <p class="physical-address">
+              1234 Random Road, Random Town, California 1234
+            </p>
+            <a href="tel:5555555555">555-555-555</a>
+            <p>ashleywilliamsisnotreal@gmail.com</p>
+          </address>
+          
+          <nav>
+            <a href="#Top">
+              <img src="img/linkedin-logo.svg" alt="linkedin logo" />
+            </a>
+            <a href="#Top">
+              <img src="img/github-logo.svg" alt="github logo" />
+            </a>
+            <a href="#Top">
+              <img src="img/twitter-logo.svg" alt="twitter logo" />
+            </a>
+          </nav>
+        </div>
+      </div>
+
+      <div class="footer-img">
+        <img src="" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
