add footer img and media query for tablets

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div>
           <h2>Contact Me</h2>
           <p>
-            please get in touch if you think our work could be mutually
+            Please get in touch if you think our work could be mutually
             beneficial!
           </p>
           <address>
@@ -214,7 +214,9 @@
       </div>
 
       <div class="footer-img">
-        <img src="" alt="" />
+        <img src="img/handshake_1280_853.jpg" alt="two people shaking hands"
+        width="1280" height="850"
+        srcset="" />
       </div>
     </footer>
   </body>
