add media query for tablet width

--- a/index.html
+++ b/index.html
@@ -26,21 +26,22 @@
           width="1920"
           height="2880"
         />
-
         <h2 class="name">Ashley Williams</h2>
       </div>
-
       <div>
         <h2>About me</h2>
-
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, nostrum
-          fugit dolorem optio inventore officia ut? Quos voluptatibus incidunt,
-          dolores nesciunt, autem cumque laborum fugiat facere distinctio, et
-          accusantium tempora! Perferendis animi quaerat blanditiis minus,
-          voluptas maiores accusantium cumque aperiam, atque dolore vero
-          incidunt nisi! Cum libero voluptate veritatis. Eos expedita dolor odio
-          architecto vitae est non, voluptas earum veritatis?
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis
+          repellendus maxime fugiat? Ut ipsa deleniti, delectus minima officiis
+          quibusdam quis reprehenderit, sed, fugit consequuntur sapiente iusto
+          quae temporibus eligendi rem? A itaque dignissimos sapiente magni
+          soluta doloribus amet odio pariatur, delectus officiis neque minus
+          quia maxime. Mollitia dolorum vel, maiores eum placeat, dolorem iste
+          molestias debitis quasi quas, deserunt obcaecati. Placeat soluta
+          debitis veniam necessitatibus nobis illum dicta vitae cum est, dolore
+          ea quo corporis neque quam at, ipsam hic explicabo incidunt in
+          possimus totam quisquam quas laboriosam reprehenderit? Odio?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore suscipit, fugit cumque quam a accusantium aspernatur aliquam quae veniam odit autem atque expedita quaerat explicabo fugiat ullam tenetur corrupti quia? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis labore voluptatem pariatur ad non ea praesentium, debitis possimus deleniti minima explicabo! Expedita, nemo ullam error suscipit dolores a accusantium ratione.
         </p>
 
         <nav>
@@ -198,7 +199,7 @@
             <a href="tel:5555555555">555-555-555</a>
             <p>ashleywilliamsisnotreal@gmail.com</p>
           </address>
-          
+
           <nav>
             <a href="#Top">
               <img src="img/linkedin-logo.svg" alt="linkedin logo" />
@@ -214,9 +215,13 @@
       </div>
 
       <div class="footer-img">
-        <img src="img/handshake_1280_853.jpg" alt="two people shaking hands"
-        width="1280" height="850"
-        srcset="" />
+        <img
+          src="img/handshake_1280_853.jpg"
+          alt="two people shaking hands"
+          width="1280"
+          height="850"
+          srcset=""
+        />
       </div>
     </footer>
   </body>
