finish the full screen size

--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
   </head>
   <body>
     <header id="top">
-      <div>
-        <img
-          class="profile-picture"
-          src="./img/person_bodyshot_1920_2880.jpg"
-          alt="Ashley Williams"
-          srcset="
-            ./img/person_bodyshot_640_960.jpg    640w,
-            ./img/person_bodyshot_1280_1920.jpg 1920w,
-            ./img/person_bodyshot_1920_2880.jpg 1920w
-          "
-          sizes="(max-width: 640px) 640px, (max-width: 1280px) 1280px, 1920px"
-          width="1920"
-          height="2880"
-        />
-        <h2 class="name">Ashley Williams</h2>
-      </div>
-      <div>
-        <h2>About me</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis
-          repellendus maxime fugiat? Ut ipsa deleniti, delectus minima officiis
-          quibusdam quis reprehenderit, sed, fugit consequuntur sapiente iusto
-          quae temporibus eligendi rem? A itaque dignissimos sapiente magni
-          soluta doloribus amet odio pariatur, delectus officiis neque minus
-          quia maxime. Mollitia dolorum vel, maiores eum placeat, dolorem iste
-          molestias debitis quasi quas, deserunt obcaecati. Placeat soluta
-          debitis veniam necessitatibus nobis illum dicta vitae cum est, dolore
-          ea quo corporis neque quam at, ipsam hic explicabo incidunt in
-          possimus totam quisquam quas laboriosam reprehenderit? Odio?
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore suscipit, fugit cumque quam a accusantium aspernatur aliquam quae veniam odit autem atque expedita quaerat explicabo fugiat ullam tenetur corrupti quia? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis labore voluptatem pariatur ad non ea praesentium, debitis possimus deleniti minima explicabo! Expedita, nemo ullam error suscipit dolores a accusantium ratione.
-        </p>
-
-        <nav>
-          <a href="#top"
-            ><img src="img/linkedin-logo.svg" alt="Linkedin logo"
-          /></a>
-          <a href="#top">
-            <img src="img/github-logo.svg" alt="Github Logo" />
-          </a>
-          <a href="#top"
-            ><img src="img/twitter-logo.svg" alt="twitter logo"
-          /></a>
-        </nav>
+      <div class="header-container">
+        <div>
+          <img
+            class="profile-picture"
+            src="./img/person_bodyshot_1920_2880.jpg"
+            alt="Ashley Williams"
+            srcset="
+              ./img/person_bodyshot_640_960.jpg    640w,
+              ./img/person_bodyshot_1280_1920.jpg 1920w,
+              ./img/person_bodyshot_1920_2880.jpg 1920w
+            "
+            sizes="(max-width: 640px) 640px, (max-width: 1280px) 1280px, 1920px"
+            width="1920"
+            height="2880"
+          />
+          <h2 class="name">Ashley Williams</h2>
+        </div>
+        <div>
+          <h2>About me</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis
+            repellendus maxime fugiat? Ut ipsa deleniti, delectus minima officiis
+            quibusdam quis reprehenderit, sed, fugit consequuntur sapiente iusto
+            quae temporibus eligendi rem? A itaque dignissimos sapiente magni
+            soluta doloribus amet odio pariatur, delectus officiis neque minus
+            quia maxime. Mollitia dolorum vel, maiores eum placeat, dolorem iste
+            molestias debitis quasi quas, deserunt obcaecati. Placeat soluta
+            debitis veniam necessitatibus nobis illum dicta vitae cum est, dolore
+            ea quo corporis neque quam at, ipsam hic explicabo incidunt in
+            possimus totam quisquam quas laboriosam reprehenderit? Odio?
+          </p>
+          <nav>
+            <a href="#top"
+              ><img src="img/linkedin-logo.svg" alt="Linkedin logo"
+            /></a>
+            <a href="#top">
+              <img src="img/github-logo.svg" alt="Github Logo" />
+            </a>
+            <a href="#top"
+              ><img src="img/twitter-logo.svg" alt="twitter logo"
+            /></a>
+          </nav>
+        </div>
       </div>
     </header>
 
